--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -6,7 +6,7 @@
     <article>
         <h1>{{pin.title}}</h1>
         <p>{{pin.description}}</p>
-        <p>{{pin.createdAt}}</p>
     </article>
+     <a href ="{{ path('app_pins_edit', {id: pin.id}) }}">Edit</a>
     <a href ="{{ path('app_home') }}">Go Back</a>
 {% endblock %}
